src/test/resources/syntax/invalid/group_definition_string_constant_for_float.unpick
unpick v3
const float
    "" = ""